--- a/src/main/webapp/VAADIN/themes/petstore-theme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/petstore-theme/styles.scss
@@ -4,8 +4,8 @@
 // This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
 // The actual styles should be defined in mytheme.scss
 
-.mytheme {
+.petstore-theme {
   @include addons;
-  @include mytheme;
+  @include petstore-theme;
 
 }
