--- a/frontend/styles/components/app-bar.css
+++ b/frontend/styles/components/app-bar.css
@@ -8,7 +8,9 @@
   /*flex-direction: row;*/
   position: relative;
   z-index: 1;
-  padding: 0 10px;
+  padding: 0 0 0 10px;
+  margin: 0 -32px 0 0;
+  width: calc(100vw - 6px) !important;
   flex: 0.2;
 }
 
