--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 <div id="sidenav">
 	<h3>Petstore Admin</h3>
 	<a href="ux/">Petstore</a>
-	<a href="ui/w2ui/index.html">JPA Entities</a>
+	<a href="jpa-csv/admin/index.html">JPA Entities</a>
 	<a th:href="'file-manager/index.html?path=' + ${@environment.getProperty('user.home')}">File Manager</a>
 	<a th:href="'file-explorer/?dir=' + ${@environment.getProperty('user.home')}">File Explorer</a>
 	<a href="web-shell/index.html">Web Shell</a>
